# MandelbrotFractalCreator

./: .gitignore  CMakeLists.txt  README.md
src/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  RGB.cpp  RGB.h  Zoom.h  ZoomList.cpp  ZoomList.h  bitmapfileheader.h  bitmapinfoheader.h  main.cpp
test/: BitmapFileHeaderUnitTest.cpp  CMakeLists.txt  ZoomListUnitTest.cpp  main.cpp
